render my webpage goddamit

--- a/portal/cctv/templates/index.html
+++ b/portal/cctv/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base_gen.html" %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
+  <h1>Basic Home</h1>
+  <p>Welcome to Home, a website</p>
   <h2>Dynamic content</h2>
-  <p>The library has the following record counts:</p>
+  <p>Some Dynamic content test at somepoint:</p>
   <ul>
     <li><strong>Temp:</strong></li>
   </ul>
