--- a/portal/cctv/templates/cctv/stream.html
+++ b/portal/cctv/templates/cctv/stream.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_gen.html" %}
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% block title %}<title>Test Camera</title>{% endblock %}
 </head>
-
-<body>
-
-
-
+{% block content %}
     <!-- CSS  -->
     <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
 
-
     <!-- HTML -->
-    <video id='hls-example' class="video-js vjs-default-skin" width="400" height="300" controls>
-        {% load static %}
-        <source type="application/x-mpegURL" src="{% static stream_dir %}/stream.m3u8">
-    </video>
-
+    <div class="grid-container">
+        {% for dir in stream_dir %}
+            <span class="span2" tabindex="0"><b>{{dir}}</b></span>
+            <p class="alert" >
+                <video id='hls-example' class="video-js vjs-default-skin" width="400" height="300" controls>
+                    <source type="application/x-mpegURL" src="static/{{dir}}/stream.m3u8">
+                </video>
+                <span class="span3" tabindex="0">/\</span>
+            </p>
+        {% endfor %}
+    </div>
 
     <!-- JS code -->
-    <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
     <script src="https://vjs.zencdn.net/7.2.3/video.js"></script>
@@ -33,9 +29,10 @@
         var player = videojs('hls-example');
         player.play();
     </script>
-
-
-
-</body>
-
-</html>
+    <script>
+        $('.btn-cta-secondary').click(function (e) {
+            var id = $(e.currentTarget).data('id')
+            $('#til' + id).toggle()
+        })
+    </script>
+{% endblock %}
