--- a/portal/cctv/templates/pages/alerts.html
+++ b/portal/cctv/templates/pages/alerts.html
@@ -1,8 +1,8 @@
-{% extends "base_gen.html" %}
+{% extends "snippets/base_gen.html" %}
 
 {% block content %}
-  <h1>Basic Home</h1>
-  <p>Welcome to Home, a website</p>
+  <h1>Alerts Page</h1>
+  <p>Welcome to the alerts page, for my cctv project</p>
   <h2>Dynamic content</h2>
   <p>Some Dynamic content test at somepoint:</p>
   <ul>
