Front end should now render videos when poulated in the statc and added ability to read stats from the back end for the index page

--- a/portal/cctv/templates/snippets/base_gen.html
+++ b/portal/cctv/templates/snippets/base_gen.html
@@ -83,7 +83,7 @@
                       </svg><span>Home</span></a>
                   </li>
                   <li>
-                    <a href="/cam">
+                    <a href="/cameras">
                       <svg class="cam">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#cam"></use>
                       </svg><span>CCTV Viewer</span></a>
@@ -106,7 +106,6 @@
     {% endblock %}
     <div class="wrap-all-the-things">
       <div class="col-sm-10 ">
-      <>
               {% block content %}
               {% endblock %}
       </div>
