--- a/portal/cctv/templates/pages/cam.html
+++ b/portal/cctv/templates/pages/cam.html
@@ -1,22 +1,43 @@
 {% extends "snippets/base_gen.html" %}
 
 <head>
-    {% block title %}<title>Test Camera</title>{% endblock %}
+    {% block title %}<title>Live View</title>{% endblock %}
 </head>
 {% block content %}
-    <!-- CSS  -->
+<br>
+<h1>Live View</h1>
+    <!-- Additional CSS  -->
     <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
-    <!-- HTML -->
-    
-    <div class="video-grid">
-        {% for dir in stream_dir %}
-            <div class="video-item">
-            <div class="video-wrap">
-                <iframe src="static/{{dir}}/stream.m3u8" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="jumbotron">
+    <div class="row w-100">
+            <!-- Video Grid -->
+                {% for dir in stream_dir %}
+                <div class="col-md-10">
+                <button onclick="myFunction_{{dir|cut:" "}}()">{{dir}}</button>
+                    <div id="{{dir|cut:" "}}">
+                        <div class="video-item">
+                            <div class="video-wrap">
+                                <iframe src="static/{{dir}}/stream.m3u8" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- JS -->
+                    <script>
+                    var x = document.getElementById("{{dir|cut:" "}}");
+                    x.style.display = "none";
+                    function myFunction_{{dir|cut:" "}}() {
+                        var x = document.getElementById("{{dir|cut:" "}}");
+                        if (x.style.display === "none") {
+                            x.style.display = "block";
+                        } else {
+                            x.style.display = "none";
+                        }
+                    }
+                    </script>
+                    <!-- End JS -->
+                </div>
+                {% endfor %}
             </div>
             </div>
-        {% endfor %}
-    </div>
-    <!-- JS code -->
-<script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+            <!-- End of Video Grid-->
 {% endblock %}
