--- a/portal/cctv/templates/pages/index.html
+++ b/portal/cctv/templates/pages/index.html
@@ -1,47 +1,55 @@
 {% extends "snippets/base_gen.html" %}
-
 {% block content %}
-  <h1>Basic Home</h1>
-  <p>Welcome to Home, a website</p>
-  <h2>Dynamic content</h2>
-  <p>Some Dynamic content test at somepoint:</p>
-  <ul>
-    <li><strong>Temp:</strong></li>
-  </ul>
-
+<h1>CCTV Home Page</h1>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
+<h1>Stats</h1>
 <div class="jumbotron">
-<div class="row w-100">
-        <div class="col-md-3">
+  <div class="row w-100">
+        <div class="col-md-4">
             <div class="card border-info mx-sm-1 p-3">
                 <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-car" aria-hidden="true"></span></div>
-                <div class="text-info text-center mt-3"><h4>Cars</h4></div>
-                <div class="text-info text-center mt-2"><h1>234</h1></div>
+                <div class="text-info text-center mt-4"><h4>Notifications</h4></div>
+                <div class="text-info text-center mt-2"><h1>{{ notification_count }}</h1></div>
             </div>
         </div>
-        <div class="col-md-3">
-            <div class="card border-success mx-sm-1 p-3">
-                <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
-                <div class="text-success text-center mt-3"><h4>Eyes</h4></div>
-                <div class="text-success text-center mt-2"><h1>9332</h1></div>
+        <div class="col-md-4">
+            <div class="card border-info mx-sm-1 p-3">
+                <div class="card border-info shadow text-info p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
+                <div class="text-info text-center mt-4"><h4>Cameras</h4></div>
+                <div class="text-info text-center mt-2"><h1>{{ camera_count }}</h1></div>
             </div>
         </div>
-        <div class="col-md-3">
-            <div class="card border-danger mx-sm-1 p-3">
-                <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-heart" aria-hidden="true"></span></div>
-                <div class="text-danger text-center mt-3"><h4>Hearts</h4></div>
-                <div class="text-danger text-center mt-2"><h1>346</h1></div>
+        <div class="col-md-4">
+            <div class="card border-info mx-sm-1 p-3">
+                <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-heart" aria-hidden="true"></span></div>
+                <div class="text-info text-center mt-4"><h4>Rules</h4></div>
+                <div class="text-info text-center mt-2"><h1>{{ unique_rules_count }}</h1></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <br>
+        <div class="col-md-4">
             <div class="card border-warning mx-sm-1 p-3">
                 <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span></div>
-                <div class="text-warning text-center mt-3"><h4>Inbox</h4></div>
-                <div class="text-warning text-center mt-2"><h1>346</h1></div>
+                <div class="text-warning text-center mt-4"><h4>Days Recorded</h4></div>
+                <div class="text-warning text-center mt-2"><h1>{{ days_Recorded }}</h1></div>
             </div>
         </div>
-     </div>
+        <div class="col-md-4">
+            <div class="card border-danger mx-sm-1 p-3">
+                <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span></div>
+                <div class="text-danger text-center mt-4"><h4>Cameras Inactive</h4></div>
+                <div class="text-danger text-center mt-2"><h1>{{ cameras_inactive }}</h1></div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card border-warning mx-sm-1 p-3">
+                <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span></div>
+                <div class="text-warning text-center mt-4"><h4>Rules Inactive</h4></div>
+                <div class="text-warning text-center mt-2"><h1>{{rules_inactive}}</h1></div>
+            </div>
+        </div>
+  </div>
 </div>
 {% endblock %}
